[gd_scene load_steps=13 format=3 uid="uid://byj2urkcyxpwb"]

[ext_resource type="PackedScene" uid="uid://csw7fbg0tf7eu" path="res://scene/Component/sprite.tscn" id="1_81rdm"]
[ext_resource type="Script" path="res://src/KamikazeDrone.gd" id="1_dw4lj"]
[ext_resource type="Shader" path="res://resources/shaders/FlashDamage.gdshader" id="2_e2726"]
[ext_resource type="PackedScene" uid="uid://g40wu5scfhpc" path="res://scene/Component/Health.tscn" id="2_se5hm"]
[ext_resource type="Texture2D" uid="uid://inusy26ncr0o" path="res://assets/sprite.png" id="3_8otbe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nqkev"]
resource_local_to_scene = true
shader = ExtResource("2_e2726")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = false

[sub_resource type="AtlasTexture" id="AtlasTexture_iv474"]
atlas = ExtResource("3_8otbe")
region = Rect2(112, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6uku"]
atlas = ExtResource("3_8otbe")
region = Rect2(128, 112, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nuugr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv474")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6uku")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qvcv2"]
size = Vector2(13, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_l7iex"]
radius = 131.004

[sub_resource type="CircleShape2D" id="CircleShape2D_tuqwj"]
radius = 21.095

[node name="KamikazeDrone" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_dw4lj")

[node name="Sprite" parent="." instance=ExtResource("1_81rdm")]
material = SubResource("ShaderMaterial_nqkev")
sprite_frames = SubResource("SpriteFrames_nuugr")
frame_progress = 0.6387

[node name="Health" parent="." instance=ExtResource("2_se5hm")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_qvcv2")

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_l7iex")

[node name="ExplosionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRadius"]
shape = SubResource("CircleShape2D_tuqwj")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="body_entered" from="ExplosionRadius" to="." method="_on_explosion_radius_body_entered"]
